<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/fechaFinaltext"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/fechaFinal"
        android:layout_width="224dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:text="@string/initial_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/seleccionar_fechaInicial"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:padding="9dp"
        android:text="@string/seleccionar1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/seleccionar_fechaFinal"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:padding="9dp"
        android:text="@string/seleccionarB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <ImageView
        android:id="@+id/grafica_por_dias"
        android:layout_width="355dp"
        android:layout_height="221dp"
        android:contentDescription="@string/image_per_hour"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/titulo2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/gr_fica_por_intervalo_de_fechas1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seleccionar_fechaInicio1"
        android:layout_width="210dp"
        android:layout_height="36dp"
        android:layout_marginTop="388dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/seleccione_la_fecha_inicial1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seleccionar_fechaFinal1"
        android:layout_width="199dp"
        android:layout_height="24dp"
        android:layout_marginTop="512dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/seleccione_la_fecha_final1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>