<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <TextView
        android:id="@+id/titulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr_fica_temperaturas_m_ximas_y_m_nimas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/seleccionar_fechaTexto1"
        android:layout_width="245dp"
        android:layout_height="27dp"
        android:layout_marginTop="100dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/temperatura_m_xima_alcanzada1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/variable_mínima"
        android:layout_width="247dp"
        android:layout_height="33dp"
        android:layout_marginTop="400dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/temperatura_m_nima_alcanzada"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/grafica_variableMinima"
        android:layout_width="355dp"
        android:layout_height="221dp"
        android:contentDescription="@string/image_per_hour"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <ImageView
        android:id="@+id/grafica_variableMaxima"
        android:layout_width="355dp"
        android:layout_height="221dp"
        android:contentDescription="@string/image_per_hour"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />
</androidx.constraintlayout.widget.ConstraintLayout>