<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="224dp"
        android:layout_height="47dp"
        android:background="@drawable/border"
        android:text="@string/initial_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634" />

    <Button
        android:id="@+id/seleccionar_fecha1"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:padding="9dp"
        android:text="Seleccionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/seleccionar_hora"
        android:layout_width="133dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:padding="9dp"
        android:text="Selecionar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />

    <ImageView
        android:id="@+id/grafica_por_horas"
        android:layout_width="355dp"
        android:layout_height="221dp"
        android:contentDescription="@string/image_per_hour"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gr_fica_por_intervalos_de_horas"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/seleccionar_fechaTexto1"
        android:layout_width="170dp"
        android:layout_height="31dp"
        android:layout_marginTop="392dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/seleccione_una_fecha1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seleccionar_horaTexto1"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:layout_marginTop="512dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/seleccione_una_hora1"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

